<?xml version="1.0"?>
<package>
  <name>hotspot_sim</name>
  <version>0.5.1</version>
  <description>The hotspot urdf simulation package</description>
  <author email="doal8589@colorado.edu">Doncey Albin!!</author>

  <maintainer email="doal8589@colorado.edu">Doncey Albin!!</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>controller_manager</run_depend>
  <run_depend>diff_drive_controller</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>gazebo_ros_control</run_depend>
  <run_depend>joint_state_controller</run_depend>
  <run_depend>position_controllers</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>rqt_robot_steering</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>hotspot_urdf</run_depend>
  <run_depend>xacro</run_depend>

</package>
